# AGY-Shim

./: .gitattributes  .gitignore  .graphifyignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  TESTING.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.agents/rules/: graphify.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: security.md
.github/workflows/: ci.yml  windows-ci.yml
docs/: REVIEW_REQUEST.md  architecture.md  graphify.md  implementation-plan.md  quickstart.md  review-handoff.md  security-model.md  testing.md
docs/reviews/: code-review-report.md  cso-checklist.md  engineering-checklist.md
scripts/: build_launchers.ps1  launcher.cs  setup_agy_shim.ps1
src/agy_shim/: __init__.py  main.py
tests/: test_e2e.py  test_escape.py  test_security.py
tests/fixtures/: mock_agy.cmd  mock_agy.py
