[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agy-shim"
version = "0.2.2"
description = "Experimental ACP bridge for the Antigravity CLI on Windows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
